--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         "webmozart/assert": "*"
     },
     "require-dev": {
+        "dama/doctrine-test-bundle": "^8.0",
         "doctrine/doctrine-fixtures-bundle": "*",
         "friendsofphp/php-cs-fixer": "^3.54",
         "phpstan/phpstan": "^1.10",
